# TestBDD

./: CMakeLists.txt  README.md  setup.sh
features/: addition.feature
features/step_definitions/: CalcTestSteps.cpp  cucumber.wire
lib/mycalc/include/: calc.hpp
